 * Updated German translations from Meviox

KeePassDroid (1.99.2)
 * Fix crash on entries without icons set (closes: #484) 
 * Prevent crash and show warning for Samsung clipboard error
   (closes: #436)

KeePassDroid (1.99.1)
 * Add support for editing advanced strings in .kdbx files
 * Add ability to create new groups in .kdbx files
 * Password generator improvements from Dirk Bergstrom
 * Add support for adding new entries and editing entries in .kdbx files
   (closes: #144)
 * Update Catalan translations (closes: #445)
 * Trim whitespace from queries from josefwells (closes: #467)
 * Updated French transaltions from Nam

KeePassDroid (1.9.18.3)
 * Restore the timeout service, we need it to keep the app in memory long
   enough to clear the clipboard and to remove the notifications.
 * Autolink comment and advanced fields
 * i18n more database error strings
 * Updated Russian translations from I Nedoboy
 * New Catalan translations from Oriol Garrote
 * Remove eye icon on Android >3.0 devices
 * Fix logic for when to display the words Show Password vs. Hide Password

KeePassDroid (1.9.18.2)
 * Updated Dutch translations from Erik Jan Meijer
 * Updated Russian translations from I Nedoboy
 * Add Danish translations from Frederik Svarre

KeePassDroid (1.9.18.1)
 * Fix crash with blank icons

KeePassDroid (1.9.18)
 * Add input types to entry fields
 * Show username in the title list for TAN entries
 * Switch to monospace font for password fields
 * Implement action bar on entry edit activity
 * Updated Russian translations from I Nedoboy

KeePassDroid (1.9.17)
 * Updated Russian translations from I Nedoboy
 * New Spanish translations from jipanos
 * New Dutch translations Erik Fdevriendt
 * Fix header verification in .kdbx
 * Rework timeout implementation should fix some bugs with passwords persisting

KeePassDroid (1.9.16)
 * Updated Hungarian translations from intel
 * Updated German translations from rvs2008

KeePassDroid (1.9.15)