@@ -29,3 +29,4 @@ jipanos - Spanish
 Erik Fdevriendt, Erik Jan Meijer - Dutch
 Frederik Svarre - Danish
 Oriol Garrote - Catalan
+Mika Takala - Finnish
