@@ -1,4 +1,5 @@
  * Updated German translations from Meviox
+ * Add Finnish translations from Mika Takala
 
 KeePassDroid (1.99.2)
  * Fix crash on entries without icons set (closes: #484) 
